--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#2E9D92</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#ffffff</color>
-    <color name="grey_100">#1b34d8</color>
+    <color name="grey_100">#EDEDEE</color>
 </resources>
