--- a/app/src/main/res/layout/activity_recipe_main_page.xml
+++ b/app/src/main/res/layout/activity_recipe_main_page.xml
@@ -6,21 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".RecipeMainPage">
 
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recycler_view_workouts"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/recycler_view"
+        android:layout_alignBottom="@+id/recycler_view_workouts"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="30dp"
         android:clickable="true"
