--- a/app/src/main/res/layout/layout_list.xml
+++ b/app/src/main/res/layout/layout_list.xml
@@ -5,6 +5,21 @@
         android:padding="15dp"
         android:id="@+id/parent_layout">
 
+    <Button
+        android:id="@+id/deleteBtn"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:alpha="0.25"
+        android:text="X"
+        android:textSize="12sp"
+        android:visibility="visible" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -20,4 +35,5 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
         android:textSize="17sp"/>
+
 </RelativeLayout>
